--- a/gb/18/10/22/n10801597.md
+++ b/gb/18/10/22/n10801597.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nynade343/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/nynade343/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/nynade343/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nynade343/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/nynade343/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nynade343/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/nynade343/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nynade343/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/nynade343/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nynade343/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/nynade343/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nynade343/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/nynade343/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nynade343/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/nynade343/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nynade343/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/nynade343/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/nynade343/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/nynade343/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/nynade343/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/nynade343/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/nynade343/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/nynade343/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/nynade343/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/nynade343/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/nynade343/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/nynade343/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/nynade343/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/nynade343/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/nynade343/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/nynade343/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/nynade343/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/nynade343/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/nynade343/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/nynade343/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/nynade343/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/nynade343/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/nynade343/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/nynade343/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/nynade343/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/nynade343/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/nynade343/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/nynade343/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/nynade343/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/nynade343/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/nynade343/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/nynade343/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>中期选举共和党民调落后 专家：仍有胜算</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2018/10/GettyImages-1057350054-600x400.jpg" />
 <h6>美国将于11月6日举行第116届国会选举（中期选举），目前已有20个州开始先期投票。据最新民调，民主党有可能打破共和党控制国会的局势，拿下联邦众议院的主导权。然而，专家分析，共和党仍有可能保住众议院多数席位。图为内华达州先期投票的选民。(Ethan Miller/Getty Images)
@@ -20,16 +20,16 @@
 <p>不过，CBS新闻民调专家安东尼?萨尔万托（Anthony Salvanto）提醒，“兴趣”与“投票率”是两回事，对中期选举有兴趣的民主党选民，特别是年轻人及少数族裔等“低（投票）倾向选民”（Low-propensity Voters），最终是否会去投票，仍是未知数。值得注意的是，共和党拥有忠实的支持者，其在白人选民群组中的投票率一直保持领先。</p>
 <p>此外，萨尔万托说，民主党想要夺回众议院控制权，必须争取郊区选民，而郊区的“低倾向选民”人数并不多。</p>
 <p>美国政治年鉴（Almanac of American Politics）共同创始人迈克尔?巴罗恩（Michael Barone）说，上次（2014年）中期选举，几名共和党候选人最终险胜的原因是，得到郊区选民的支持。</p>
-<p>2016年美国总统大选前，FiveThirtyEight.com的民调显示，只有25%选民支持共和党候选人<ahref="https://github.com/nynade343/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>（特朗普）。选后该民调机构负责人Nate Silver坚持民调结果没有错，25%的支持度不代表川普一定会落选。</p>
+<p>2016年美国总统大选前，FiveThirtyEight.com的民调显示，只有25%选民支持共和党候选人<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>（特朗普）。选后该民调机构负责人Nate Silver坚持民调结果没有错，25%的支持度不代表川普一定会落选。</p>
 <p>据CBS最新民调，共和党不受欢迎的比例，仅落后民主党2个百分点（38%对40%）。</p>
-<h2><ahref="https://github.com/nynade343/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>支持度达到顶峰</h2>
+<h2><ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>支持度达到顶峰</h2>
 <p>民调机构Real Clear Politics分析师西恩?特伦德（Sean Trende）说，川普总统支持度的攀升，有助于共和党取得胜利，保住在众议院的多数席位。</p>
 <p>CBS新闻说，依目前多家民调结果，川普总统的支持度平均达到44%，达到顶峰。NBC新闻与《华尔街日报》的最新民调，47%登记选民满意川普总统的工作表现。</p>
 <p>洛伊德认为，川普支持度攀升的原因是，选民终于开始关注经济等根本问题。</p>
 <p>川普上任后，工作机会增加，失业率降到3.7%，为近50年来最低点。在近期的集会活动中，川普总统提醒选民：“民主党制造暴民，共和党创造就业机会。”并且说民主党是造成大篷车（大量中美洲国家公民北上，试图非法入境美国）的原因之一。</p>
 <p>洛伊德说：“消费者信心指数持续上升，60%成年人认为孩子的未来，会比他们更好。这意味着美国经济朝着正确的方向发展。”</p>
 <p>据CBS新闻的民调，七成的美国人认为经济状况良好，这是自1998年科技泡沫以来的最高数字。</p>
-<p><strong>美国<ahref="https://github.com/nynade343/djy/blob/master/gb/tag/2018%E5%B9%B4%E4%B8%AD%E6%9C%9F%E9%80%89%E4%B8%BE.md#1">2018年中期选举</a>（第116届国会选举）</strong></p>
+<p><strong>美国<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/2018%E5%B9%B4%E4%B8%AD%E6%9C%9F%E9%80%89%E4%B8%BE.md#1">2018年中期选举</a>（第116届国会选举）</strong></p>
 <p>1）众议院435席全部改选：目前共和党占237席，民主党占193席，5席空缺，党派必须获得至少218席，才能成为多数党。</p>
 <p>联邦众议员任期2年，没有连任限制。各州席位人数按照人口比例分配，大约每50万人选出1名众议员。候选人必须年满25岁，成为美国公民届满7年，且为竞选所在州的居民。</p>
 <p>2）参议院改选35席：联邦参议院总计100席，50个州各有2席，目前共和党51席，民主党49席（有2席是亲民主党的独立政党）。</p>
@@ -43,41 +43,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/nynade343/djy/blob/master/gb/18/9/30/n10752300.md#1">中期选举前夕 川普到美5个州巡回演讲</a></li>
-<li><a href="https://github.com/nynade343/djy/blob/master/gb/18/10/21/n10798928.md#1">川普：11月初或推出对中等收入者减税政策</a></li>
-<li><a href="https://github.com/nynade343/djy/blob/master/gb/18/10/21/n10799269.md#1">专家：美强硬对待中共 民主党胜选也不会变</a></li>
-<li><a href="https://github.com/nynade343/djy/blob/master/gb/18/10/21/n10799392.md#1">美将退出《中导条约》 博尔顿周二见普京</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/9/30/n10752300.md#1">中期选举前夕 川普到美5个州巡回演讲</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/21/n10798928.md#1">川普：11月初或推出对中等收入者减税政策</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/21/n10799269.md#1">专家：美强硬对待中共 民主党胜选也不会变</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/21/n10799392.md#1">美将退出《中导条约》 博尔顿周二见普京</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/nynade343/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/26/n11280593.md#1" target="_blank">观雨堂主：吴晗——不止是个人的悲哀</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/8/n11098363.md#1" target="_blank">美国际宗教自由大使访港 促停止迫害法轮功</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/26/n10742140.md#1" target="_blank">韩丽明：麻雀的哀歌</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/27/n10092593.md#1" target="_blank">大学教授修炼身心受益 反迫害控告江泽民</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/nynade343/djy/blob/master/gb/21/7/25/n13113957.md#1">【馨香雅句】中国传统色彩承载了哪些文化</a></li>
-<li><a href="https://github.com/nynade343/djy/blob/master/gb/21/7/29/n13125465.md#1">【未解之谜】台湾朱秀华 “借尸还魂”60年</a></li>
-<li><a href="https://github.com/nynade343/djy/blob/master/gb/21/7/23/n13110635.md#1">【未解之谜】捕捉灵魂的摄影师</a></li>
-<li><a href="https://github.com/nynade343/djy/blob/master/gb/21/7/20/n13102261.md#1">一首诗惊动皇上  跨越关山圆了情人梦</a></li>
-<li><a href="https://github.com/nynade343/djy/blob/master/gb/21/7/23/n13110780.md#1">【忽必烈传】贤后察必辅佐 治家有方教子严</a></li>
-<li><a href="https://github.com/nynade343/djy/blob/master/gb/21/7/31/n13129916.md#1">【马克时空】SpaceX星链8月再升空 半年后覆盖两极</a></li>
-<li><a href="https://github.com/nynade343/djy/blob/master/gb/21/7/31/n13128792.md#1">车评：跑车复刻 2021 Toyota GR Supra 2.0</a></li>
-<li><a href="https://github.com/nynade343/djy/blob/master/gb/21/7/30/n13127996.md#1">【首播】专访利特琼：帮助中国人民获得自由</a></li>
-<li><a href="https://github.com/nynade343/djy/blob/master/gb/21/7/28/n13122749.md#1">前军队技术官：北京清楚贸然攻打台湾后果</a></li>
-<li><a href="https://github.com/nynade343/djy/blob/master/gb/21/7/31/n13129522.md#1">分析：美国从阿富汗撤军 中共为何生惧</a></li>
-<li><a href="https://github.com/nynade343/djy/blob/master/gb/21/7/31/n13129893.md#1">吴亦凡被北京警方刑拘 中国娱乐圈或面临整治</a></li>
-<li><a href="https://github.com/nynade343/djy/blob/master/gb/21/7/29/n13125683.md#1">运动员出身的大陆女星 周冬雨的表现最亮眼</a></li>
-<li><a href="https://github.com/nynade343/djy/blob/master/gb/21/7/30/n13128360.md#1">戴资颖进东奥羽球女单4强 林志玲送神秘礼物</a></li>
-<li><a href="https://github.com/nynade343/djy/blob/master/gb/21/7/30/n13128114.md#1">古天乐赞张家朗奥运夺冠 拒评同场《声梦》学员</a></li>
-<li><a href="https://github.com/nynade343/djy/blob/master/gb/21/8/1/n13130420.md#1">宋承宪《VOICE 4》收尾 剧末伏笔铺梗第5季</a></li>
-<li><a href="https://github.com/nynade343/djy/blob/master/gb/21/7/30/n13127962.md#1">台湾资深艺人洪麟骤逝 享寿78岁</a></li>
-<li><a href="https://github.com/nynade343/djy/blob/master/gb/21/7/28/n13122210.md#1">苦瓜退火养心、降血糖 加1物养生效果更好</a></li>
-<li><a href="https://github.com/nynade343/djy/blob/master/gb/21/7/30/n13126866.md#1">牛奶、植物奶谁好？营养师：这款蛋白质最多</a></li>
-<li><a href="https://github.com/nynade343/djy/blob/master/gb/21/7/29/n13124918.md#1">辉瑞疫苗保护力降至不足50% 原因一篇看懂</a></li>
-<li><a href="https://github.com/nynade343/djy/blob/master/gb/21/7/30/n13126288.md#1">哥国女选手赛前大喊“马英九”？ 网友求解</a></li>
-<li><a href="https://github.com/nynade343/djy/blob/master/gb/21/8/1/n13130775.md#1">大自然的奇迹？ 一棵树矗立在死海的盐岛上</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746033.md#1">【探索时分】四大理由 中共应向俄罗斯开战？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752508.md#1">【唐瑞讲故事】睡美人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752436.md#1">李克强十万人大会事先获得习近平默许？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752163.md#1">深圳前市长陈如桂落马 传有三大原因</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/2/n13751276.md#1">好莱坞明星强尼戴普诽谤案胜诉 台主播发感言</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/nynade343/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/nynade343/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/10/22/n10801597.htm">中期选举共和党民调落后 专家：仍有胜算</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/10/22/n10801597.htm">中期选举共和党民调落后 专家：仍有胜算</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/nynade343/djy/blob/master/gb/18/10/22/n10801597.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/nynade343/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nynade343/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/nynade343/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/nynade343/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nynade343/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nynade343/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nynade343/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nynade343/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/nynade343/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nynade343/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nynade343/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nynade343/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nynade343/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nynade343/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nynade343/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nynade343/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/nynade343/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nynade343/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/nynade343/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nynade343/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nynade343/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nynade343/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nynade343/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nynade343/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/nynade343/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nynade343/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nynade343/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nynade343/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/nynade343/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nynade343/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nynade343/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nynade343/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nynade343/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nynade343/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nynade343/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nynade343/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nynade343/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nynade343/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nynade343/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nynade343/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nynade343/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nynade343/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nynade343/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nynade343/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nynade343/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nynade343/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nynade343/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nynade343/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/18/10/22/n10801597.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
